syntax = "proto3";
package comdex.lend.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/lend/types";

message LendAsset {
  uint64 lending_id = 1
  [(gogoproto.customname) = "ID", (gogoproto.moretags) = "yaml:\"lending_id\""];

  uint64 asset_id = 2 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];

  uint64 pool_id = 3 [
    (gogoproto.customname) = "PoolID",
    (gogoproto.moretags) = "yaml:\"pool_id\""
  ];

  string owner = 4 [(gogoproto.moretags) = "yaml:\"owner\""];

  cosmos.base.v1beta1.Coin amount_in = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_in\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  google.protobuf.Timestamp lending_time = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"lending_time\""
  ];

  string available_to_borrow = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"available_to_borrow\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  uint64 app_id = 8
  [(gogoproto.customname) = "AppID", (gogoproto.moretags) = "yaml:\"app_id\""];

  string global_index = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"global_index\""
  ];

  google.protobuf.Timestamp last_interaction_time = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"last_interaction_time\""
  ];

  string cpool_name = 11 [
    (gogoproto.customname) = "CPoolName",
    (gogoproto.moretags) = "yaml:\"cpool_name\""
  ];
}

message BorrowAsset {
  uint64 borrowing_id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.moretags) = "yaml:\"borrowing_id\""
  ];

  uint64 lending_id = 2 [
    (gogoproto.customname) = "LendingID",
    (gogoproto.moretags) = "yaml:\"lending_id\""
  ];

  bool is_stable_borrow = 3 [
    (gogoproto.moretags) = "yaml:\"is_stable_borrow\""
  ];

  uint64 pair_id = 4 [
    (gogoproto.customname) = "PairID",
    (gogoproto.moretags) = "yaml:\"pair_id\""
  ];

  cosmos.base.v1beta1.Coin amount_in = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_in\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  cosmos.base.v1beta1.Coin amount_out = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_out\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  cosmos.base.v1beta1.Coin bridged_asset_amount = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"bridged_asset_amount\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  google.protobuf.Timestamp borrowing_time = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"borrowing_time\""
  ];

  string stable_borrow_rate = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stable_borrow_rate\""
  ];

  string updated_amount_out = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"updated_amount_out\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  string global_index = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"global_index\""
  ];
  string reserve_global_index = 12 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"reserve_global_index\""
  ];

  google.protobuf.Timestamp last_interaction_time = 13 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"last_interaction_time\""
  ];

  string cpool_name = 14 [
    (gogoproto.customname) = "CPoolName",
    (gogoproto.moretags) = "yaml:\"cpool_name\""
  ];
}

message Pool {
  uint64 pool_id = 1 [
    (gogoproto.customname) = "PoolID",
    (gogoproto.moretags) = "yaml:\"pool_id\""
  ];

  string module_name = 2 [
    (gogoproto.customname) = "ModuleName",
    (gogoproto.moretags) = "yaml:\"module_name\""
  ];

  uint64 main_asset_id = 3 [
    (gogoproto.customname) = "MainAssetId",
    (gogoproto.moretags) = "yaml:\"main_asset_id\""
  ];

  uint64 first_bridged_asset_id = 4 [
    (gogoproto.customname) = "FirstBridgedAssetID",
    (gogoproto.moretags) = "yaml:\"first_bridged_asset_id\""
  ];

  uint64 second_bridged_asset_id = 5 [
    (gogoproto.customname) = "SecondBridgedAssetID",
    (gogoproto.moretags) = "yaml:\"second_bridged_asset_id\""
  ];

  string cpool_name = 6 [
    (gogoproto.customname) = "CPoolName",
    (gogoproto.moretags) = "yaml:\"cpool_name\""
  ];

  uint64 reserve_funds = 7 [
    (gogoproto.moretags) = "yaml:\"reserve_funds\""
  ];

  repeated AssetDataPoolMapping asset_data = 8 [
    (gogoproto.customname) = "AssetData",
    (gogoproto.moretags) = "yaml:\"asset_data\""
  ];

}

message AssetDataPoolMapping{
  uint64 asset_id = 1 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  bool is_bridged = 2 [
    (gogoproto.moretags) = "yaml:\"is_bridged\""
  ];
}

message Extended_Pair {
  uint64 id = 1;
  uint64 asset_in = 2 [(gogoproto.moretags) = "yaml:\"asset_in\""];
  uint64 asset_out = 3 [(gogoproto.moretags) = "yaml:\"asset_out\""];
  bool is_inter_pool = 4 [
    (gogoproto.moretags) = "yaml:\"is_inter_pool\""
  ];

  uint64 asset_out_pool_id = 5 [
    (gogoproto.customname) = "AssetOutPoolID",
    (gogoproto.moretags) = "yaml:\"asset_out_pool_id\""
  ];

  uint64 min_usd_value_left = 6 [
    (gogoproto.moretags) = "yaml:\"min_usd_value_left\""];
}

message AssetToPairMapping{
  uint64 asset_id = 1 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  uint64 pool_id = 2 [
    (gogoproto.customname) = "PoolID",
    (gogoproto.moretags) = "yaml:\"pool_id\""
  ];
  repeated uint64 pair_id = 3 [
    (gogoproto.customname) = "PairID",
    (gogoproto.moretags) = "yaml:\"pair_id\""
  ];
}

message UserLendIdMapping{
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  repeated uint64 lend_ids = 2 [
    (gogoproto.customname) = "LendIDs",
    (gogoproto.moretags) = "yaml:\"lend_ids\""
  ];
}

message LendIdByOwnerAndPoolMapping{
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  uint64 pool_id = 2 [
    (gogoproto.customname) = "PoolID",
    (gogoproto.moretags) = "yaml:\"pool_id\""
  ];
  repeated uint64 lendIds = 3 [
    (gogoproto.customname) = "LendIDs",
    (gogoproto.moretags) = "yaml:\"lend_ids\""
  ];
}

message BorrowIdByOwnerAndPoolMapping{
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  uint64 pool_id = 2 [
    (gogoproto.customname) = "PoolID",
    (gogoproto.moretags) = "yaml:\"pool_id\""
  ];
  repeated uint64 borrowIds = 3 [
    (gogoproto.customname) = "BorrowIDs",
    (gogoproto.moretags) = "yaml:\"borrow_ids\""
  ];
}

message UserBorrowIdMapping{
  string owner = 1 [(gogoproto.moretags) = "yaml:\"owner\""];
  repeated uint64 borrow_ids = 2 [
    (gogoproto.customname) = "BorrowIDs",
    (gogoproto.moretags) = "yaml:\"borrow_ids\""
  ];
}

message LendIdToBorrowIdMapping{
  uint64 lending_id = 1[
    (gogoproto.customname) = "LendingID",
    (gogoproto.moretags) = "yaml:\"lending_id\""
  ];
  repeated uint64 borrowing_id = 2 [
    (gogoproto.customname) = "BorrowingID",
    (gogoproto.moretags) = "yaml:\"borrowing_id\""
  ];
}

message AssetStats{
  uint64 pool_id = 1 [
    (gogoproto.customname) = "PoolID",
    (gogoproto.moretags) = "yaml:\"pool_id\""
  ];

  uint64 asset_id = 2 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];

  string total_borrowed = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_borrowed\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  string total_stable_borrowed = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_stable_borrowed\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  string total_lend = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_lend\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  string lend_apr = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"lend_apr\""
  ];

  string borrow_apr = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"borrow_apr\""
  ];

  string stable_borrow_apr = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stable_borrow_apr\""
  ];

  string utilisation_ratio = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"utilisation_ratio\""
  ];
}

message AssetRatesStats{
  uint64 asset_id = 1 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  string u_optimal = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"u_optimal\""
  ];
  string base = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"base\""
  ];
  string slope1 = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"slope1\""
  ];
  string slope2 = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"slope2\""
  ];
  bool enable_stable_borrow = 6 [
    (gogoproto.moretags) = "yaml:\"enable_stable_borrow\""
  ];
  string stable_base = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stable_base\""
  ];
  string stable_slope1 = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stable_slope1\""
  ];
  string stable_slope2 = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stable_slope2\""
  ];
  string ltv = 10 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"ltv\""
  ];
  string liquidation_threshold = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"liquidation_threshold\""
  ];
  string liquidation_penalty = 12 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"liquidation_penalty\""
  ];
  string liquidation_bonus = 13 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"liquidation_bonus\""
  ];
  string reserve_factor = 14 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"reserve_factor\""
  ];
  uint64 c_asset_id = 15 [
    (gogoproto.customname) = "CAssetID",
    (gogoproto.moretags) = "yaml:\"c_asset_id\""
  ];

}

message LendMapping{
  repeated uint64 lend_ids = 1 [
    (gogoproto.customname) = "LendIDs",
    (gogoproto.moretags) = "yaml:\"lend_ids\""
  ];
}

message BorrowMapping{
  repeated uint64 borrow_ids = 1 [
    (gogoproto.customname) = "BorrowIDs",
    (gogoproto.moretags) = "yaml:\"borrow_ids\""
  ];
}

message StableBorrowMapping{
  repeated uint64 stable_borrow_ids = 1 [
    (gogoproto.customname) = "StableBorrowIDs",
    (gogoproto.moretags) = "yaml:\"stable_borrow_ids\""
  ];
}

message ModuleBalance{
  uint64 pool_id = 1 [
    (gogoproto.customname) = "PoolID",
    (gogoproto.moretags) = "yaml:\"pool_id\""
  ];
  repeated ModuleBalanceStats module_balance_stats = 2[
    (gogoproto.moretags) = "yaml:\"module_balance_stats\""
  ];
}

message ModuleBalanceStats{
  uint64 asset_id = 1 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  cosmos.base.v1beta1.Coin balance = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"balance\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}

message BalanceStats{
  uint64 asset_id = 1 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  string amount = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
}

message DepositStats{
  repeated BalanceStats balance_stats = 1[
    (gogoproto.moretags) = "yaml:\"balance_stats\""
  ];
}

message AuctionParams{
  uint64 app_id = 1 [
    (gogoproto.moretags) = "yaml:\"app_id\""
  ];
  uint64 auction_duration_seconds = 2 [
    (gogoproto.moretags) = "yaml:\"auction_duration_seconds\""
  ];
  string buffer = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"buffer\""
  ];
  string cusp = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"cusp\""
  ];
  string step = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"step\""
  ];
  uint64 price_function_type = 6 [
    (gogoproto.moretags) = "yaml:\"price_function_type\""
  ];
  uint64 dutch_id = 7 [
    (gogoproto.moretags) = "yaml:\"dutch_id\""
  ];
  uint64 bid_duration_seconds = 8 [
    (gogoproto.moretags) = "yaml:\"bid_duration_seconds\""
  ];
}

message ReservePoolRecordsForBorrow{
  uint64 borrowing_id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.moretags) = "yaml:\"borrowing_id\""
  ];
  string interest_accumulated = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"interest_accumulated\""
  ];
}

message Borrow_interest_tracker{
  uint64 borrowing_id = 1 [
    (gogoproto.moretags) = "yaml:\"borrowing_id\""
  ];
  string interest_accumulated = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"interest_accumulated\""
  ];
}

message Lend_rewards_tracker{
  uint64 lending_id = 1 [
    (gogoproto.moretags) = "yaml:\"lending_id\""
  ];
  string rewards_accumulated = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"interest_accumulated\""
  ];
}

message LendAssetOld {
  uint64 lending_id = 1
  [(gogoproto.customname) = "ID", (gogoproto.moretags) = "yaml:\"lending_id\""];

  uint64 asset_id = 2 [
    (gogoproto.customname) = "AssetID",
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];

  uint64 pool_id = 3 [
    (gogoproto.customname) = "PoolID",
    (gogoproto.moretags) = "yaml:\"pool_id\""
  ];

  string owner = 4 [(gogoproto.moretags) = "yaml:\"owner\""];

  cosmos.base.v1beta1.Coin amount_in = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_in\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  google.protobuf.Timestamp lending_time = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"lending_time\""
  ];

  string updated_amount_in = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"updated_amount_in\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  string available_to_borrow = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"available_to_borrow\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  string reward_Accumulated = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"reward_accumulated\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  uint64 app_id = 10
  [(gogoproto.customname) = "AppID", (gogoproto.moretags) = "yaml:\"app_id\""];

  string global_index = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"global_index\""
  ];

  google.protobuf.Timestamp last_interaction_time = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"last_interaction_time\""
  ];

  string cpool_name = 13 [
    (gogoproto.customname) = "CPoolName",
    (gogoproto.moretags) = "yaml:\"cpool_name\""
  ];
}

message BorrowAssetOld {
  uint64 borrowing_id = 1 [
    (gogoproto.customname) = "ID",
    (gogoproto.moretags) = "yaml:\"borrowing_id\""
  ];

  uint64 lending_id = 2 [
    (gogoproto.customname) = "LendingID",
    (gogoproto.moretags) = "yaml:\"lending_id\""
  ];

  bool is_stable_borrow = 3 [
    (gogoproto.moretags) = "yaml:\"is_stable_borrow\""
  ];

  uint64 pair_id = 4 [
    (gogoproto.customname) = "PairID",
    (gogoproto.moretags) = "yaml:\"pair_id\""
  ];

  cosmos.base.v1beta1.Coin amount_in = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_in\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  cosmos.base.v1beta1.Coin amount_out = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount_out\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  cosmos.base.v1beta1.Coin bridged_asset_amount = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"bridged_asset_amount\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  google.protobuf.Timestamp borrowing_time = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"borrowing_time\""
  ];

  string stable_borrow_rate = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"stable_borrow_rate\""
  ];

  string updated_amount_out = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"updated_amount_out\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  string interest_Accumulated = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"interest_accumulated\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];

  string global_index = 12 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"global_index\""
  ];
  string reserve_global_index = 13 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"reserve_global_index\""
  ];

  google.protobuf.Timestamp last_interaction_time = 14 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"last_interaction_time\""
  ];

  string cpool_name = 15 [
    (gogoproto.customname) = "CPoolName",
    (gogoproto.moretags) = "yaml:\"cpool_name\""
  ];
}
