syntax = "proto3";
package comdex.vault.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package            = "github.com/comdex-official/comdex/x/vault/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message Vault {
  uint64 id = 1
      [ (gogoproto.customname) = "ID", (gogoproto.moretags) = "yaml:\"id\"" ];
  uint64 pair_id = 2 [
    (gogoproto.customname) = "PairID",
    (gogoproto.moretags)   = "yaml:\"pair_id\""
  ];
  string owner     = 3 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  string amount_in = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount_in\"",
    (gogoproto.nullable)   = false
  ];
  string amount_out = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount_out\"",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Timestamp created_at = 6 [
      (gogoproto.nullable) = false,
      (gogoproto.stdtime) = true,
      (gogoproto.moretags)   = "yaml:\"created_at\""
  ];
  string market_cap = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false,
    (gogoproto.moretags)   = "yaml:\"market_cap\""
  ];


}


message UserVaultIdMapping {
  string owner = 2 [
      (gogoproto.moretags) = "yaml:\"owner\""
  ];
  repeated uint64 vault_ids = 3 [
      (gogoproto.moretags) = "yaml:\"vault_ids\""
  ];
}

message VaultIds {
  repeated uint64 vault_ids = 1 [
    (gogoproto.moretags) = "yaml:\"vault_ids\""
  ];
}

message CollateralVaultIdMapping {
  string collateral_denom = 1 [
    (gogoproto.moretags) = "yaml:\"collateral_denom\""
  ];
  map<string, VaultIds> cassets_vault_ids_map = 2 [
    (gogoproto.moretags) = "yaml:\"cassets_vault_ids_map\""
  ];
}

message CAssetsMintStatistics {
  string collateral_denom = 1 [
    (gogoproto.moretags) = "yaml:\"collateral_denom\""
  ];
  map<string, uint64> minted_assets = 2 [
    (gogoproto.moretags) = "yaml:\"minted_assets\""
  ];
}